# litestar-pingcrm

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
app/: asgi.py  cli.py  config.py  deps.py
app/controllers/: access.py  contacts.py  organizations.py  profile.py  site.py  users.py
app/schemas/: __init__.py  _accounts.py  accounts.py
app/services/: __init__.py  _users.py  contacts.py  organizations.py  users.py
config/: __init__.py  _app.py  crypt.py
database/: models.py
database/fixtures/: users.json
database/migrations/: alembic.ini  env.py  script.py.mako
database/migrations/versions/: 2025-01-06_user_account_dae410bc7137.py  2025-01-07_initial_ping_crm_models_d49c7401666c.py
resources/js/Pages/Auth/: Register.vue
resources/js/Pages/Contacts/: Index.vue
resources/views/: app.html.j2
